[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/player/Theme.tres" type="Theme" id=1]
[ext_resource path="res://addons/player/Interact/Interact.gd" type="Script" id=2]

[node name="Interact" type="RayCast"]
enabled = true
cast_to = Vector3( 0, 0, -4 )
collide_with_areas = true
script = ExtResource( 2 )

[node name="InteractText" type="Label" parent="."]
modulate = Color( 0.87451, 0.580392, 0.933333, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -173.0
margin_top = 80.0
margin_right = 173.0
margin_bottom = 238.0
theme = ExtResource( 1 )
text = "Interact"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InteractTween" type="Tween" parent="."]

[node name="TextTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
